CI: fix max-width to prevent table overflowing
Can happen in case of long commit messages

--- a/infra/ci/frontend/static/style.css
+++ b/infra/ci/frontend/static/style.css
@@ -194,6 +194,7 @@ input[type=text].term-search:focus {
 
 .main-table tbody td:first-child {
     padding-left: 20px;
+    max-width: 55vw;
 }
 
 .main-table thead {
